# cds

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  pyproject.toml  ruff.toml
.agent/: Architecture_Decision_Log.md  Memory_Scratchpad.md  Plan.md
crates/kernel/: Cargo.toml
crates/kernel/src/: canonical.rs  lib.rs
crates/kernel/src/deduce/: datalog.rs  mod.rs  octagon.rs  rules.rs
crates/kernel/src/lean/: client.rs  mod.rs  snippet.rs
crates/kernel/src/schema/: mod.rs  onionl.rs  smt.rs  telemetry.rs  verification.rs
crates/kernel/src/service/: app.rs  config.rs  errors.rs  handlers.rs  mod.rs  state.rs
crates/kernel/src/solver/: cvc5.rs  mod.rs  script.rs  warden.rs  z3.rs
crates/kernel/tests/: deduce_smoke.rs  golden_roundtrip.rs  lean_smoke.rs  service_pipeline_smoke.rs  service_smoke.rs  solver_smoke.rs
crates/kernel/tests/common/: mod.rs
crates/zk_kernel/: Cargo.toml
crates/zk_kernel/guest/: Cargo.toml  README.md
crates/zk_kernel/guest/src/: main.rs
crates/zk_kernel/src/: errors.rs  lib.rs  prove.rs  verify.rs  witness.rs
dapr/: README.md  config.yaml
dapr/components/: fhircast-subscriptions.yaml  pubsub-inmemory.yaml  state-store-inmemory.yaml
data/fhir/: README.md  icu-monitor-01.observations.json  icu-monitor-02.observations.json
data/guidelines/: README.md  contradictory-bound.recorded.json  contradictory-bound.txt  hypoxemia-trigger.recorded.json  hypoxemia-trigger.txt
data/sample/: README.md  icu-monitor-01.csv  icu-monitor-01.meta.json  icu-monitor-02.json
docker/: cds-frontend.Dockerfile  cds-harness.Dockerfile  cds-kernel.Dockerfile
frontend/: README.md  bunfig.toml  package.json  playwright.config.ts  svelte.config.js  tsconfig.json
frontend/e2e/: pipeline.e2e.ts  tombstone.e2e.ts
frontend/src/lib/: index.ts  tombstone.spec.ts
frontend/src/lib/components/: AstTree.svelte  MucViewer.svelte  Octagon.svelte  VerificationTrace.svelte
frontend/src/lib/schemas/: index.ts  onion.ts  parity.test.ts  parse.ts  pipeline.ts  recheck.ts  smt.ts  telemetry.ts  trace.ts  verdict.ts
frontend/src/lib/server/: dapr.ts  errors.ts
frontend/src/lib/stores/: highlight.svelte.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/api/deduce/: +server.ts
frontend/src/routes/api/ingest/: +server.ts
frontend/src/routes/api/recheck/: +server.ts
frontend/src/routes/api/solve/: +server.ts
frontend/src/routes/api/translate/: +server.ts
k8s/: README.md  cds-frontend.yaml  cds-harness.yaml  cds-kernel.yaml  dapr-config.yaml  kind-cluster.yaml  namespaces.yaml
k8s/dapr-components/: pubsub-inmemory.yaml  state-store-inmemory.yaml
k8s/observability/: README.md  dapr-podmonitor.yaml  grafana-dapr-dashboard-cm.yaml  kube-prometheus-stack-values.yaml  namespace.yaml  otel-collector-values.yaml
proofs/: README.md  contradictory-bound.alethe.proof
python/cds_harness/: __init__.py
python/cds_harness/ingest/: __init__.py  __main__.py  canonical.py  cli.py  csv_loader.py  errors.py  fhir_observation.py  fhircast.py  json_loader.py  loader.py  loinc.py  timestamps.py  validation.py
python/cds_harness/schema/: __init__.py  onionl.py  smt.py  telemetry.py  verification.py
python/cds_harness/service/: __init__.py  __main__.py  app.py
python/cds_harness/translate/: __init__.py  __main__.py  adapter.py  cli.py  clover.py  errors.py  smt_emitter.py
python/cds_harness/workflow/: __init__.py  __main__.py  activities.py  fhir_axis.py  pipeline.py
python/scripts/: fhir_pipeline_smoke.py  fhircast_smoke.py
python/tests/: test_cloud_axis.py  test_dapr_foundation.py  test_dapr_pipeline.py  test_dockerfiles.py  test_fhir_axis.py  test_fhir_fixtures.py  test_fhir_ingest.py  test_fhircast.py  test_ingest.py  test_k8s_foundation.py  test_k8s_observability.py  test_schema_roundtrip.py  test_service.py  test_smoke.py  test_translate.py  test_zk_foundation.py  test_zk_prove.py  test_zk_witness.py
tests/: README.md
tests/golden/: README.md  clinical_telemetry_payload.json  formal_verification_trace.json  onionl_ir_tree.json  smt_constraint_matrix.json
