# =============================================================================
# Neurosymbolic CDS — Rust workspace (Edition 2024)
# =============================================================================

[workspace]
resolver = "3"
members = ["crates/kernel"]

[workspace.package]
version       = "0.0.0"
edition       = "2024"
rust-version  = "1.85"
license       = "Apache-2.0 WITH LLVM-exception"
authors       = ["Emir Turkes"]
readme        = "README.md"
description   = "Neurosymbolic Clinical Decision Support — Phase 0 deductive kernel"

[workspace.dependencies]
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ascent             = { version = "0.8", default-features = false }
reqwest            = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
axum               = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "macros"] }
tower              = { version = "0.5", default-features = false, features = ["util"] }
tower-http         = { version = "0.6", default-features = false, features = ["trace"] }

[profile.release]
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = "debuginfo"

[profile.dev]
opt-level = 0
debug     = true
