# =============================================================================
# Neurosymbolic CDS — Rust workspace (Edition 2024)
# =============================================================================

[workspace]
resolver = "3"
members = ["crates/kernel", "crates/zk_kernel"]
# `crates/zk_kernel/guest/` is the Risc0 guest program — built for
# `riscv32im-risc0-zkvm-elf` via the cargo-risczero cross-compiler, NOT
# for the host `cargo check --workspace` graph. Excluded so the workspace
# build stays toolchain-agnostic. The guest crate is wired up at Task
# 12.3a as a scaffold; the matching `risc0-zkvm` workspace host dep +
# the host prove/verify call sites + the guest body land at Task 12.3b1
# (ADR-035 — split of original 12.3b along the dep+body / smoke+round-
# trip boundary). The `zk-prove-smoke` recipe + `tests/canonical_roundtrip.rs`
# integration test land at Task 12.3b2.
exclude = ["crates/zk_kernel/guest"]

[workspace.package]
version       = "0.0.0"
edition       = "2024"
rust-version  = "1.85"
license       = "Apache-2.0 WITH LLVM-exception"
authors       = ["Emir Turkes"]
readme        = "README.md"
description   = "Neurosymbolic Clinical Decision Support — Phase 0 deductive kernel"

[workspace.dependencies]
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1", features = ["full"] }
anyhow             = "1"
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ascent             = { version = "0.8", default-features = false }
reqwest            = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots"] }
axum               = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "macros"] }
tower              = { version = "0.5", default-features = false, features = ["util"] }
tower-http         = { version = "0.6", default-features = false, features = ["trace"] }
# Phase 1 ZK axis (Task 12.3b1 — ADR-035). Pinned `=3.0.5` in lockstep
# with the sha-pinned cargo-risczero v3.0.5 toolchain installer staged
# by `just fetch-zk` (ADR-035 §2 supersedes ADR-034 §2's v3.0.1 pin —
# v3.0.1's transitive dep tree pulls `risc0-circuit-rv32im 4.0.4`
# which fails to compile on rustc 1.95.0 due to dyn-incompatible
# `impl Trait` in trait return types; v3.0.5 spans the same v3.x
# major line and fixes the dyn-compat issue at source). Bumping
# requires a coordinated change: new sha256 + new ZK_TOOLCHAIN_VERSION
# + new ADR. Each consumer crate selects its own feature subset
# (host: `prove` for local proving + verification; guest: `default-
# features = false` per https://docs.rs/risc0-zkvm/3.0.5 guest
# guidance).
risc0-zkvm         = { version = "=3.0.5", default-features = false }
# Receipt serialization (host-side). Pulled in transitively by
# `risc0-zkvm/client`; declared here so the host crate can call
# `bincode::{serialize, deserialize}` on `Receipt` without depending
# on the transitive surface.
bincode            = "1"

[profile.release]
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = "debuginfo"

[profile.dev]
opt-level = 0
debug     = true
