[project]
name            = "cds-harness"
version         = "0.0.0"
description     = "Neurosymbolic CDS Python harness — autoformalization, ontology alignment, SMT/ASP orchestration"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "Apache-2.0 WITH LLVM-exception" }
authors         = [{ name = "Emir Turkes" }]
dependencies = [
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/cds_harness"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
testpaths     = ["python/tests", "tests"]
asyncio_mode  = "auto"
addopts       = "-ra --strict-markers"
