[project]
name            = "cds-harness"
version         = "0.0.0"
description     = "Neurosymbolic CDS Python harness — autoformalization, ontology alignment, SMT/ASP orchestration"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "Apache-2.0 WITH LLVM-exception" }
authors         = [{ name = "Emir Turkes" }]
dependencies = [
    "pydantic>=2.9",
    "z3-solver>=4.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "dapr>=1.17",
    "dapr-ext-workflow>=1.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyyaml>=6.0",
]

[project.scripts]
cds-ingest          = "cds_harness.ingest.cli:main"
cds-translate       = "cds_harness.translate.cli:main"
cds-harness-service = "cds_harness.service.__main__:main"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/cds_harness"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths     = ["python/tests", "tests"]
asyncio_mode  = "auto"
addopts       = "-ra --strict-markers"
