[package]
name         = "cds-kernel"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
readme.workspace       = true
description  = "CDS deductive kernel: ascent Datalog, Octagon abstract interpretation, subprocess warden + Z3/cvc5 drivers."

[lib]
name = "cds_kernel"
path = "src/lib.rs"

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
ascent             = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
