[package]
name         = "cds-kernel"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
readme.workspace       = true
description  = "CDS deductive kernel: ascent Datalog, Octagon abstract interpretation, subprocess warden + Z3/cvc5 drivers."

[lib]
name = "cds_kernel"
path = "src/lib.rs"

# Phase 0 kernel service binary (Task 8.3a). axum app exposing /healthz
# (and, in 8.3b, /v1/deduce, /v1/solve, /v1/recheck) under a Dapr sidecar.
[[bin]]
name = "cds-kernel-service"
path = "src/bin/cds_kernel_service.rs"

[dependencies]
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
ascent             = { workspace = true }
reqwest            = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true }

# `nix` is the production-side syscall surface for the warden's
# SIGTERM-first timeout escalation (ADR-021 §2 + §4 — promoted from
# `[dev-dependencies]` in Task 8.4a after rolling forward through six
# prior ADR deferrals: 014 §9 → 015 §8 → 016 §7 → 018 §6 → 019 §11 →
# 020 §6). The same crate also serves the dapr-CLI cleanup helper in
# `tests/common.rs` (ADR-018 §6 narrow auth), so a single dependency
# entry covers both call sites; default-feature-disabled keeps the
# surface to `signal` only.
nix = { version = "0.31", default-features = false, features = ["signal"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
