[package]
name         = "zk-kernel"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
readme.workspace       = true
description  = "CDS ZKSMT post-quantum proof attestation kernel: Risc0 v3.x zkVM glue (Phase 1 — Task 12.1 foundation stub)."

[lib]
name = "zk_kernel"
path = "src/lib.rs"

[dependencies]
# Foundation-only deps (Task 12.1 — ADR-032 §3 + §8). The heavy
# `risc0-zkvm` crate (host + guest API) and the `cargo-risczero` /
# `rzup` toolchain are intentionally NOT pulled in yet — added at
# Task 12.2 (witness gen) when the first kernel-side consumer lands.
# Mirrors ADR-025 §3 + §8 (FHIR axis: `fhirbolt` locked as candidate;
# Cargo.toml addition deferred to first kernel-side consumer).
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
