[package]
name         = "zk-kernel"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
readme.workspace       = true
description  = "CDS ZKSMT post-quantum proof attestation kernel: Risc0 v3.0.1 zkVM host glue (Phase 1 — Task 12.3b1 prove + verify body fills)."

[lib]
name = "zk_kernel"
path = "src/lib.rs"

[dependencies]
# Phase 1 ZK axis deps (Task 12.3b1 — ADR-035 §3). The host-side surface
# gates on `risc0-zkvm`'s `prove` feature (which itself enables `client`
# + `std` per the v3.0.1 feature graph) — we get `default_prover()` +
# `ExecutorEnv` + `Receipt::verify` + `compute_image_id` in one feature
# pull. `bincode` serializes the `Receipt` to/from the opaque `ZkProof`
# byte payload — pulled in transitively by `risc0-zkvm/client`, declared
# directly here so the call sites compile without relying on the
# transitive surface.
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
risc0-zkvm = { workspace = true, features = ["prove"] }
bincode    = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
