# =============================================================================
# zk-kernel-guest ŌĆö Risc0 zkVM guest program (Phase 1, Task 12.3b1 body fill)
# =============================================================================
# Per ADR-035: this crate is the Risc0 guest program ŌĆö compiled for the
# `riscv32im-risc0-zkvm-elf` target via the cargo-risczero cross-compiler
# (`just fetch-zk` stages cargo-risczero v3.0.1 under `.bin/.zk/`;
# `cargo risczero install` provisions the cross-compiler ŌĆö Task 12.3b2
# operator step). The crate is EXCLUDED from the workspace `cargo check
# --workspace` graph (root `Cargo.toml` `[workspace] exclude`) so the
# host build stays toolchain-agnostic.
#
# Task 12.3b1 (this commit) ŌĆö body fills:
# - `risc0-zkvm` guest dep added (default-features = false; std on so
#   the guest can use `Vec` / `String` / `serde_json::from_slice`).
# - `serde` + `serde_json` declared so the guest can JSON-decode the
#   `SmtTrace` payload (`witness::extract_witness` mirror).
# - `src/main.rs` body now runs: `env::read::<Vec<u8>>()` ŌåÆ witness
#   header validation ŌåÆ `serde_json::from_slice::<SmtTrace>` ŌåÆ minimal
#   Alethe replay subset checker ŌåÆ `env::commit(&(theory_signature,
#   muc_labels))` to bind the verdict to the receipt's journal.
#
# Task 12.3b2 (deferred): `zk-prove-smoke` Justfile recipe + cargo
# integration test `tests/canonical_roundtrip.rs` that drives the
# canonical `contradictory-bound` `SmtTrace` through `extract ŌåÆ prove
# ŌåÆ verify` ŌĆö gated on `.bin/.zk/cargo-risczero` (the binary the
# operator must run `cargo risczero install` from).
#
# Deps are declared directly here (NOT via `workspace = true`) because
# the guest crate is workspace-excluded.

[package]
name        = "zk-kernel-guest"
version     = "0.0.0"
edition     = "2024"
license     = "Apache-2.0 WITH LLVM-exception"
authors     = ["Emir Turkes"]
description = "CDS ZKSMT post-quantum proof attestation ŌĆö Risc0 guest program (Phase 1, Task 12.3b1 body fill)."

[[bin]]
name = "zk-kernel-guest"
path = "src/main.rs"

[dependencies]
# Risc0 guest API surface (`risc0_zkvm::guest::env::{read, commit}` +
# the `entry!(main)` macro). `default-features = false` per the v3.0.5
# guest guidance (https://docs.rs/risc0-zkvm/3.0.5) ŌĆö the host-only
# `client` + `bonsai` features must NOT be enabled for guest builds.
# `std` is enabled so the guest can heap-allocate `Vec<u8>` / `String`
# (the `riscv32im-risc0-zkvm-elf` target supports std via the Risc0
# zkVM platform layer).
#
# The version is repeated verbatim from the workspace dep (ADR-035 ┬¦3
# locks `=3.0.5` in lockstep with cargo-risczero's sha-pinned tarball);
# `workspace = true` is unavailable here because this crate is in the
# workspace `exclude` list.
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["std"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all      = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
